ingress/client_ingress/canary_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-canary-ingress
  namespace: bookify
  annotations:
    kubernetes.io/ingress.class: nginx
    # Mark this as a canary ingress and set weight (10 = 10% traffic)
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
spec:
  rules:
    - host: myapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bookify-client-canary
                port:
                  number: 3000
