ingress/client_ingress/stable_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-stable-ingress
  namespace: bookify
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: myapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bookify-client
                port:
                  number: 3000
